# NatShore

./: .gitignore  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml
configs/: auto_bbox_config.yaml  config.py  pre_defined_config.yaml  pre_defined_wo_ref_config.yaml
examples/: 1_Shoreline_PCA_MACWE_all_in_one.ipynb
natshore/: main.py
natshore/configs/: auto_bbox_config.yaml  config.py  pre_defined_config.yaml  pre_defined_wo_ref_config.yaml
natshore/utils/: ee_Authenticate.py  stage1.py  stage2A.py  stage2B.py  stage3.py  utils.py
utils/: ee_Authenticate.py  stage1.py  stage2A.py  stage2B.py  stage3.py  utils.py
